# todoapp-phase5

./: .gitignore  README.md  pyproject.toml
.claude/agents/: backend-auth-specialist.md  backend-fastapi-developer.md  better-auth-specialist.md  chatbot-builder.md  database-schema-designer.md  devops-containerization.md  event-orchestrator.md  frontend-builder.md  fullstack-orchestrator.md  qa-agent.md  ui-component-generator.md
.github/: SECRETS.md
.github/workflows/: cd.yaml  ci.yaml
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  exceptions.py  logging_config.py  main.py  metrics.py
backend/app/dapr/: __init__.py  bindings.py  pubsub.py  secrets.py  state.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/events/: __init__.py  handlers.py  schemas.py  topics.py
backend/app/mcp/: __init__.py  tools.py  validation.py
backend/app/middleware/: __init__.py  logging_middleware.py
backend/app/models/: __init__.py  activity_log.py  conversation.py  message.py  recurrence.py  reminder.py  tag.py  task.py  task_tag.py  user.py
backend/app/routers/: __init__.py  activity.py  auth.py  chat.py  reminders.py  tags.py  tasks.py  websocket.py
backend/app/schemas/: __init__.py  auth.py  chat.py  recurrence.py  task.py
backend/app/services/: __init__.py  activity_service.py  agent.py  auth.py  chat.py  kafka_producer.py  recurrence_service.py  reminder_service.py  tag_service.py  task.py  websocket_manager.py
backend/tests/: conftest.py  test_auth.py  test_isolation.py  test_tasks.py
backend/tests/api/: test_tags.py
backend/tests/contract/: __init__.py  test_kafka_events.py
backend/tests/integration/: test_dapr_pubsub.py  test_recurrence.py  test_reminders.py  test_websocket.py
backend/tests/unit/: test_activity_service.py  test_recurrence_service.py  test_task_service.py
docs/: AUTH_FIX_JWKS.md  QUICKSTART.md
frontend/: package.json  pnpm-lock.yaml
frontend/__tests__/: setup.ts
infrastructure/dapr/: config.yaml
infrastructure/kafka/: topics.yaml
scripts/: cleanup-jwks.js  cloud-setup.sh  demo.sh  deploy-cloud.sh  local-setup.sh  validate-deployment.sh
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-fullstack-web/: data-model.md  (+5 more)
(+220 files in other folders)
