[project]
name = "todo-backend"
version = "0.1.0"
description = "FastAPI backend for Todo Full-Stack Web Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.9.0",
    "greenlet>=3.1.0",
    # Dapr and event-driven dependencies
    "dapr>=1.12.0",
    "dapr-ext-fastapi>=1.12.0",
    "aiokafka>=0.9.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    # Monitoring dependencies
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
